--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 jieba>=0.42.1
 tqdm>=4.46.0
 transformers>=2.3.0
-numpy==1.16.1
+numpy>=1.16.4
 torch>=1.4.0+cu101
 pandas>=0.24.0
 gensim>=3.8.3
 faiss_cpu>=1.6.3
-faiss>=1.5.3
 scikit_learn>=0.20.4
 xgboost>=0.80
