--- a/textgo/classifier/config.ini
+++ b/textgo/classifier/config.ini
@@ -66,11 +66,12 @@ vocab_path = "./vocab/vocab_zh.bin"
 max_vocab_size = 10000
 
 # pretrained embedding file path, "random" means not using pretrained 
-#embedding = "../../../w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
+#embedding = "./w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
 embedding = "random"
 
 # 训练时每隔XX steps在验证集上进行评估
-evaluation_steps = 30
+evaluation_steps = 1
+# 30
 
 
 [TextRCNN]
@@ -115,8 +116,8 @@ vocab_path = "./vocab/vocab_zh.bin"
 max_vocab_size = 10000
 
 # pretrained embedding file path, "random" means not using pretrained 
-embedding = "../../../w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
-#embedding = "random"
+#embedding = "./w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
+embedding = "random"
 
 # 训练时每隔XX steps在验证集上进行评估
 evaluation_steps = 30
@@ -164,8 +165,8 @@ vocab_path = "./vocab/vocab_zh.bin"
 max_vocab_size = 10000
 
 # pretrained embedding file path, "random" means not using pretrained 
-embedding = "../../../w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
-#embedding = "random"
+#embedding = "./w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
+embedding = "random"
 
 # 训练时每隔XX steps在验证集上进行评估
 evaluation_steps = 30
@@ -217,26 +218,61 @@ vocab_path = "./vocab/vocab_zh.bin"
 max_vocab_size = 10000
 
 # pretrained embedding file path, "random" means not using pretrained 
-embedding = "../../../w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
-#embedding = "random"
+#embedding = "./w2v_models/Tencent_AILab_ChineseEmbedding/Tencent_AILab_ChineseEmbedding"
+embedding = "random"
 
 # 训练时每隔XX steps在验证集上进行评估
 evaluation_steps = 30
 
 [Bert]
 # 若超过1000batch效果还没提升，则提前结束训练 
-require_improvement = 90 
+require_improvement = 180
 
 num_classes = 2 
  
-num_epochs = 10
- 
-batch_size = 64 
+num_epochs = 40 
+# 40
+
+batch_size = 64
  
 # 每句话处理成的长度(短填长切)  
 max_len = 64 
  
 learning_rate = 2e-5
+
+# 训练时loss是否使用类别分布的先验信息prior，主要用于解决样本不均衡问题
+loss_with_prior = False
+
+# 训练时每隔XX steps在验证集上进行评估 
+evaluation_steps = 30 
+# 30
+
+# 评估时使用的指标, dev_loss/dev_class0_precision/...
+val_metric = "dev_loss"
+
+# 预训练模型绝对地址
+pretrained_model = "./pretrained_models/bert-base-chinese-pytorch"
+
+random_seed = 1 
+
+
+[XLNet]
+# 若超过1000batch效果还没提升，则提前结束训练 
+require_improvement = 180
+
+num_classes = 2 
+ 
+num_epochs = 40
+ 
+batch_size = 64
+ 
+# 每句话处理成的长度(短填长切)  
+max_len = 64 
+ 
+learning_rate = 2e-5
+
+# 训练时loss是否使用类别分布的先验信息prior，主要用于解决样本不均衡问题
+loss_with_prior = False
 
 # 训练时每隔XX steps在验证集上进行评估 
 evaluation_steps = 30
@@ -244,6 +280,6 @@ evaluation_steps = 30
 # 评估时使用的指标, dev_loss/dev_class0_precision/...
 val_metric = "dev_loss"
 
-pretrained_model = "../../../bert-base-chinese"
+pretrained_model = "./pretrained_models/xlnet-base-chinese-pytorch"
 
 random_seed = 1 
